--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <html>
 
     <head>
+
       <title>
         sanguinarius
       </title>
+
+      <style>
+        body {background-color: powderblue;}
+        h1   {color: blue;}
+        p    {color: red;}
+      </style>
+
     </head>
 
     <body>
