--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
       </title>
 
       <style>
-        body {background-color: powderblue;}
-        h1   {color: blue;}
-        p    {color: red;}
+        body {
+          background-color: powderblue;
+        }
+
+        h1 {
+          color: blue;
+          font-family: impact;
+        }
+
+        p {
+          color: black;
+          font-family: sans-serif;
+          font-size: 160%
+        }
       </style>
 
     </head>
 
     <body>
-      <center> <p> welcome... </p> </center>
+      <h1>WELCOME!</h1>
+      <p> welcome... </p>
     </body>
 
 </html>
