--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
       <style>
         body {
+          position: relative;
+          top: 15px;
           background-color: powderblue;
         }
 
         h1 {
-          color: blue;
-          font-family: impact;
-          text-allign: center;
+          color: black;
+          font-family: sans-serif;
         }
 
         p {
@@ -29,8 +30,8 @@
     </head>
 
     <body>
-      <h1>WELCOME!</h1>
-      <p> welcome... </p>
+      <h1> <center> SANGUINARIUS </center> </h1>
+      <p> <center>  </center> </p>
     </body>
 
 </html>
