--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         body {
           position: relative;
           top: 15px;
-          background-color: powderblue;
+          background-color: black;
         }
 
         h1 {
-          color: black;
+          color: white;
           font-family: sans-serif;
         }
 
