--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         h1 {
           color: white;
-          font-family: sans-serif;
+          font-family: courier;
         }
 
         p {
