--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
           font-family: sans-serif;
           font-size: 160%
         }
+
+        .bar {
+          background-color: green;
+        }
       </style>
 
     </head>
 
     <body>
       <h1> <center> SANGUINARIUS </center> </h1>
+      <div id="bar"> </div>
       <p> <center>  </center> </p>
     </body>
 
