--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         }
 
         .bar {
-          background-color: green;
+          height: 50px;
+          width: 50px;
+          background-color: #555;
         }
       </style>
 
@@ -35,8 +37,12 @@
 
     <body>
       <h1> <center> SANGUINARIUS </center> </h1>
-      <div id="bar"> </div>
+      <div id="bar"></div>
       <p> <center>  </center> </p>
+
+      <script>
+        console.log('wassup breh!');
+      </script>
     </body>
 
 </html>
