--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
           position: relative;
           top: 15px;
-          background-color: black;
+          background-color: #333;
         }
 
         h1 {
@@ -26,10 +26,10 @@
           font-size: 160%
         }
 
-        .bar {
-          height: 50px;
-          width: 50px;
-          background-color: #555;
+        .box {
+          height: 500px;
+          width: 500px;
+          border-radius: 50%;
         }
       </style>
 
@@ -37,7 +37,7 @@
 
     <body>
       <h1> <center> SANGUINARIUS </center> </h1>
-      <div id="bar"></div>
+      <div class="box"></div>
       <p> <center>  </center> </p>
 
       <script>
