--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p> <center>  </center> </p>
 
       <script>
-        console.log('wassup breh!');
+        console.log('revision .1');
       </script>
     </body>
 
