--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           height: 500px;
           width: 500px;
           border-radius: 50%;
+          color: white;
         }
       </style>
 
@@ -41,7 +42,7 @@
       <p> <center>  </center> </p>
 
       <script>
-        console.log('revision .1');
+        console.log('revision .2');
       </script>
     </body>
 
