--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         }
 
         .box {
-          height: 500px;
-          width: 500px;
-          border-radius: 50%;
-          color: white;
+          height: 5px;
+          width: 95%;
+          background-color: white;
         }
       </style>
 
@@ -38,7 +37,7 @@
 
     <body>
       <h1> <center> SANGUINARIUS </center> </h1>
-      <div class="box"></div>
+      <center><div class="box"></div></center>
       <p> <center>  </center> </p>
 
       <script>
