--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
       </title>
 
       <style>
+
         body {
           position: relative;
           top: 15px;
           background-color: #333;
+          color: white;
+          font-family: sans-serif;
         }
 
         h1 {
@@ -20,29 +23,46 @@
           font-family: courier;
         }
 
-        p {
-          color: black;
-          font-family: sans-serif;
-          font-size: 160%
-        }
-
         .box {
           height: 5px;
           width: 95%;
           background-color: white;
         }
+
+        .mainbody {
+          height: 500px;
+          width: 500px;
+          font-size: 150%;
+          padding-top: 25px;
+        }
+
+        div {
+          word-wrap: break-word;
+        }
+
       </style>
 
     </head>
 
     <body>
+
       <h1> <center> SANGUINARIUS </center> </h1>
-      <center><div class="box"></div></center>
-      <p> <center>  </center> </p>
+
+      <center> <div class="box"></div> </center>
+
+      <center> <div class="mainbody">
+
+        Why is it that <i>homo sapiens</i>, of all organisms, are the ones bestowed with
+        such intellect?
+
+
+
+      </div> </center>
 
       <script>
         console.log('revision .2');
       </script>
+
     </body>
 
 </html>
