--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
       <title>
-        sanguinarius
+        Welcome
       </title>
 
       <style>
@@ -15,12 +15,12 @@
           top: 15px;
           background-color: #333;
           color: white;
-          font-family: sans-serif;
+          font-family: serif;
         }
 
         h1 {
           color: white;
-          font-family: courier;
+          font-family: serif;
         }
 
         .box {
@@ -30,14 +30,19 @@
         }
 
         .mainbody {
-          height: 500px;
-          width: 500px;
+          height: 600px;
+          width: 800px  ;
           font-size: 150%;
           padding-top: 25px;
         }
 
+        .footer {
+          height: 100px;
+          width: 800px;
+        }
+
         div {
-          word-wrap: break-word;
+
         }
 
       </style>
@@ -52,12 +57,46 @@
 
       <center> <div class="mainbody">
 
-        Why is it that <i>homo sapiens</i>, of all organisms, are the ones bestowed with
-        such intellect?
+        <b> Welcome. </b> <br>
 
+        <br>
 
+        The time has come for those opposed to the dogmatic, patriarchal society that we collectively live in today, to take action.
 
+        <br>
+        <br>
+
+        Although, the means of collecting these individuals is an arduous task that will take some time.
+
+        <br>
+        <br>
+
+        This is why, I offer a challenge to those interested.
+
+        <br>
+        <br>
+
+        Be mindful, however. In order to grasp the truth, you must use your free will and freedom of thought.
+
+        <br>
+        <br>
+
+        <i> <b> <font color="red"> With this in mind, good luck. </font> </b> </i>
+
+        <br>
+        <br>
+
+        "All truth passes through three stages. First, it is ridiculed. Second, it is violently opposed. Third, it is accepted as being self-evident."
+
+        <br>
+        <br>
+
+        —Arthur Schopenhauer (German philosopher, 1788-1860)
       </div> </center>
+
+      <center> <div class="footer">
+        VENI, VIDI, VICI.
+      </div></center>
 
       <script>
         console.log('revision .2');
